@@ -714,6 +714,9 @@ Tests
 
 - Issue #15539: Added regression tests for Tools/scripts/pindent.py.
 
+- Issue #17479: test_io now works with unittest test discovery.
+  Patch by Zachary Ware.
+
 - Issue #17066: test_robotparser now works with unittest test discovery.
   Patch by Zachary Ware.
 
